...
              )}
              {onSettingsPress && (
                <TouchableOpacity
                  accessibilityRole="button"
                  onPress={onSettingsPress}
                  hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
                  testID="wallet-settings"
                  accessibilityLabel={t('walletCard.walletSettings')}
                >
                  <SettingsIcon size={22} color={theme.textColor} strokeWidth={1.5} />
                </TouchableOpacity>
              )}
            </View>
...
